docker , chat delete route
