# app/static/swagger.json
@@ -65,6 +65,30 @@
         "security": [{ "Api-Key": [] }]
       }
     },
+    "/chat/{chat_id}": {
+      "delete": {
+        "tags": ["ChatRouter"],
+        "summary": "Delete a specific chat",
+        "parameters": [
+          {
+            "name": "chat_id",
+            "in": "path",
+            "description": "ID of the chat",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Chat Deleted Successfully",
+            "schema": {
+              "$ref": "#/definitions/MessageGetResponseSchema"
+            }
+          }
+        },
+        "security": [{ "Api-Key": [] }]
+      }
+    },
     "/message/{chat_id}": {
       "get": {
         "tags": ["MessageRouter"],
